Versão incluída nos arquivos TeX #RockInRioNoGitHub

--- a/MB-lista-conversao_de_unidades-gabarito.tex
+++ b/MB-lista-conversao_de_unidades-gabarito.tex
@@ -80,9 +80,10 @@ Gabarito: Conversão de Unidades
 %{Curso: Informática / Informática para Internet\par}
 {Prof: Felipe Figueiredo\par}
 {\url{http://sites.google.com/site/proffelipefigueiredo}}
-
-\vspace{1cm}
 }
+
+Versão: \verb|20141124|
+
 %%%%%%%%%%%%%%%%%%%%%%%%
 
 
