--- a/MB-lista-exponenciais_logaritmos-exercicios.tex
+++ b/MB-lista-exponenciais_logaritmos-exercicios.tex
@@ -83,9 +83,10 @@ exponenciais e Logaritmos
 %{Curso: Informática / Informática para Internet\par}
 {Prof: Felipe Figueiredo\par}
 {\url{http://sites.google.com/site/proffelipefigueiredo}}
-
-\vspace{1cm}
 }
+
+Versão: \verb|20141124|
+
 %%%%%%%%%%%%%%%%%%%%%%%%
 
 
