--- a/MB-lista-operacoes_basicas-exercicios.tex
+++ b/MB-lista-operacoes_basicas-exercicios.tex
@@ -78,9 +78,10 @@ Lista: Conjuntos Numéricos e Operações Básicas
 \par\bigskip}
 {Prof: Felipe Figueiredo\par}
 {\url{http://sites.google.com/site/proffelipefigueiredo}}
-
-\vspace{1cm}
 }
+
+Versão: \verb|20141124|
+
 %%%%%%%%%%%%%%%%%%%%%%%%
 
 
