--- a/MB-lista-relacoes-exercicios.tex
+++ b/MB-lista-relacoes-exercicios.tex
@@ -79,9 +79,10 @@ Lista: Produtos cartesianos, Relações e Funções
 %{Estácio -- PRONATEC\par} 
 {Prof: Felipe Figueiredo\par}
 {\url{http://sites.google.com/site/proffelipefigueiredo}}
-
-\vspace{1cm}
 }
+
+Versão: \verb|20141124|
+
 %%%%%%%%%%%%%%%%%%%%%%%%
 
 
