--- a/MB-lista-exponenciais_logaritmos-gabarito.tex
+++ b/MB-lista-exponenciais_logaritmos-gabarito.tex
@@ -82,9 +82,10 @@ exponenciais e Logaritmos
 %{Curso: Informática / Informática para Internet\par}
 {Prof: Felipe Figueiredo\par}
 {\url{http://sites.google.com/site/proffelipefigueiredo}}
-
-\vspace{1cm}
 }
+
+Versão: \verb|20141213|
+
 %%%%%%%%%%%%%%%%%%%%%%%%
 
 
