--- a/MB-lista-funcoes_1grau-gabarito.tex
+++ b/MB-lista-funcoes_1grau-gabarito.tex
@@ -80,9 +80,10 @@ Gabarito: Funções do primeiro grau
 %{Curso: Informática / Informática para Internet\par}
 {Prof: Felipe Figueiredo\par}
 {\url{http://sites.google.com/site/proffelipefigueiredo}}
-
-\vspace{1cm}
 }
+
+Versão: \verb|20141124|
+
 %%%%%%%%%%%%%%%%%%%%%%%%
 
 
